[package]
name = "api_server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Transportation information aggregator"
keywords = ["transportation", "webservice", "api"]
authors = ["Cláudio Pereira"]

[[bin]]
name = "intermodal"
path = "src/main.rs"

[dependencies]
commons = { path = "../commons" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "macros", "chrono", "ipnetwork"] }

axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
axum-client-ip = "0.6"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
bytes = "1.6"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.7"
csv = "1.3"
regex = "1.10"

pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9.3"
sha1 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
base64ct = { version = "1.6", features = ["alloc"] }
captcha-rs = "0.2.10"

rust-s3 = { version = "0.34", features = ["default"] }

thiserror = "1.0"
itertools = "0.13"

chrono = { version = "0.4", features = ["serde"] }

image = { version = "0.25", features = ["default"] }
webp = "0.3"
svg = "0.17"
kamadak-exif = "0.5"
mime_guess = "2.0"

urlencoding = "2.1"
reqwest = { version = "0.12", features = ["gzip", "brotli"] }

once_cell = "1.19"
config = { version = "0.14", features = ["toml"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-attributes = "0.1"
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
headers = "0.4.0"

[dev-dependencies]
tower = "0.4"