[package]
name = "commons"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Cláudio Pereira"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.2.0"

itertools = "0.11"

utoipa = { version = "3.1", features = ["axum_extras"] }

chrono = { version = "0.4", features = ["serde"] }

kamadak-exif = "0.5"
git2 = "0.17"
reqwest = { version = "0.11", features = ["gzip", "brotli"] }
zip = { version = "0.6", features = ["time"] }