[package]
name = "intermodal"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Transportation information aggregator"
keywords = ["transportation", "webservice", "api"]
authors = ["Cláudio Pereira"]

[dependencies]
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json", "macros", "chrono", "offline"] }

axum = { version = "0.6", features = ["multipart", "headers", "macros"] }
axum-macros = "0.3"
tower-http = { version = "0.4.0", features = ["cors"] }
bytes = "1.4"

utoipa = { version = "3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "2.2.0"
csv = "1.2"

pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "8.2"
sha1 = "0.10"
base16ct = { version = "0.2.0", features = ["alloc"] }

rust-s3 = { version = "0.32.3", features = ["default"] }

thiserror = "1.0"
itertools = "0.10"

chrono = { version = "0.4", features = ["serde"] }

image = { version = "0.24", features = ["default"] }
webp = "0.2"
kamadak-exif = "0.5"
mime_guess = "2.0"

urlencoding = "2.1"
reqwest = { version = "0.11", features = ["gzip", "brotli"] }
serde-xml-rs = "0.6"

once_cell = "1.17"
config = { version = "0.13", features = ["toml"] }