[package]
name = "intermodalis"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Transportation information aggregator"
keywords = ["transportation", "webservice", "api"]
authors = ["Cláudio Pereira"]

[dependencies]
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite", "json", "macros", "decimal"] }

axum = "0.5.7"

utoipa = "1.0.2"
utoipa-swagger-ui = "1.0.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", features = ["preserve_order"] }

thiserror = "1.0.30"
itertools = "0.10.3"

chrono = "0.4.19"