[package]
name = "tools"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Cláudio Pereira"]


[[bin]]
name = "planet_import"
path = "src/planet_import/main.rs"

[[bin]]
name = "snapshot_import"
path = "src/snapshot_import/main.rs"

[[bin]]
name = "linter"
path = "src/linter/main.rs"

[[bin]]
name = "update_parishes"
path = "src/update_parishes/main.rs"

[[bin]]
name = "db_integrity"
path = "src/db_integrity/main.rs"

[dependencies]
commons = { path = "../commons" }

geo = "0.26"

osmpbf = "0.3"
#osmpbf = { path = "../osmpbf" }

tokio = { version = "1", features = ["full"] }
rayon = "1.7.0"

reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-xml-rs = "0.6"

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "macros", "chrono"] }
config = { version = "0.13", features = ["toml"] }

regex = "1.7"
chrono = "0.4"
itertools = "0.11"

thiserror = "1.0.44"
env_logger = "0.10.0"