[package]
name = "tools"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Cláudio Pereira"]


[[bin]]
name = "planet_import"
path = "src/planet_import/main.rs"

[[bin]]
name = "snapshot_import"
path = "src/snapshot_import/main.rs"

[[bin]]
name = "gtfs_import"
path = "src/gtfs_import/main.rs"

[[bin]]
name = "linter"
path = "src/linter/main.rs"

[[bin]]
name = "update_geo_divisions"
path = "src/update_geo_divisions/main.rs"

[[bin]]
name = "db_integrity"
path = "src/db_integrity/main.rs"

[dependencies]
commons = { path = "../commons" }

geo = "0.28"

#osmpbf = "0.3"
osmpbf = { path = "../osmpbf" }

tokio = { version = "1", features = ["full"] }
rayon = "1.9"

reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-xml-rs = "0.6"
csv = "1.3"

config = { version = "0.14", features = ["toml"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
dotenvy = { version = "0.15" }

regex = "1.10"
chrono = "0.4"
itertools = "0.12"
strsim = "0.11"

thiserror = "1.0"
env_logger = "0.11"
once_cell = { version = "1.19" }
